Changed GUEST to AWAY

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="scoreboard flex">
-            <h3 class="scoreboard__team">GUEST</h3>
+            <h3 class="scoreboard__team">AWAY</h3>
             <div class="scoreboard__display flex">
                 <p id="points-guest" class="scoreboard__points">0</p>
             </div>
